--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,11 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env
+
+# Prisma
+prisma/dev.db
+prisma/dev.db-journal
 
 # vercel
 .vercel
@@ -34,3 +39,5 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+/lib/generated/prisma
