修改数据库

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,9 @@
 NEXT_PUBLIC_SUPABASE_URL="https://YOUR-PROJECT.supabase.co"
 NEXT_PUBLIC_SUPABASE_ANON_KEY="YOUR_SUPABASE_ANON_KEY"
 
-# Prisma (SQLite)
-DATABASE_URL="file:./prisma/dev.db"
+# Prisma (Postgres / Supabase)
+# Example (Direct): postgresql://postgres:YOUR_PASSWORD@db.YOUR_PROJECT_REF.supabase.co:5432/postgres?schema=public
+DATABASE_URL="postgresql://postgres:YOUR_PASSWORD@db.YOUR_PROJECT_REF.supabase.co:5432/postgres?schema=public"
 
 # App base URL (for SMS/email links)
 APP_BASE_URL="http://localhost:3000"
