添加站点地图

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY="YOUR_SUPABASE_ANON_KEY"
 # Prisma (Postgres / Supabase)
 # Example (Direct): postgresql://postgres:YOUR_PASSWORD@db.YOUR_PROJECT_REF.supabase.co:5432/postgres?schema=public
 DATABASE_URL="postgresql://postgres:YOUR_PASSWORD@db.YOUR_PROJECT_REF.supabase.co:5432/postgres?schema=public"
+# Optional (recommended on Vercel): direct DB connection for migrations (no pooler / no PgBouncer)
+DIRECT_URL="postgresql://postgres:YOUR_PASSWORD@db.YOUR_PROJECT_REF.supabase.co:5432/postgres?schema=public"
 
 # App base URL (for SMS/email links)
 APP_BASE_URL="http://localhost:3000"
