添加分享功能

--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,7 @@ EMAIL_FROM="Still Alive? <noreply@stillalive.app>"
 # - `node -e "console.log(require('bcryptjs').genSaltSync(12))"`
 LAST_WORDS_ENC_PASSWORD="change-me"
 LAST_WORDS_BCRYPT_SALT="$2a$12$replace_this_with_a_real_salt_string"
+
+# Share cards (required for real OG previews)
+# Any long random string is fine.
+SHARE_TOKEN_SECRET="change-me"
